@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2015 the original author or authors.
+ * Copyright 2002-2016 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -42,6 +42,7 @@ import static org.springframework.test.context.cache.ContextCacheTestUtils.*;
  * @author Sam Brannen
  * @author Michail Nikolaev
  * @since 3.1
+ * @see LruContextCacheTests
  * @see SpringRunnerContextCacheTests
  */
 public class ContextCacheTests {
